--- a/notebooks/M01_GettingStarted/M01-00-Intro.qmd
+++ b/notebooks/M01_GettingStarted/M01-00-Intro.qmd
@@ -15,7 +15,7 @@ Together, these resources constitute your programming environment.
 
 ## Choices, choices
 
-For each of these items, you have *many* options. For example, you may use a version of Python that is already installed on your computer or you may download and install a distribution, such as that provided by Anaconda. For R, you will need to have the R program installed on your computer, which is typically provide by the Comprehensive R Archive Network (CRAN).
+For each of these items, you have *many* options. For example, you may have a version of Python that is already installed on your computer, or you may download and install a distribution, such as that provided by Anaconda. For R, you will need to have the R program installed on your computer, which is typically provided by the Comprehensive R Archive Network (CRAN).
 
 There are many, many choices for editors, ranging from simple text editors like BBEdit on Mac and NotePad++ for Windows to VS Code, Jupyter Lab, RStudio, and other IDEs (integrated development environments).
 
@@ -35,7 +35,11 @@ Hello, World!
 
 Programs may also be run from within a text editor or IDE, for example using "play" buttons that avoid interaction with the command line. In the case of R, by far the IDE of choice is RStudio. For Python, popular choices include PyCharm, Spyder, Jupyter Lab, and VS Code. Recently, VS Code has become very popular.
 
-Because of the vast number of possible combinations of interpreter, editor, and mode of execution, in this course we will assume that you already have installed the tools to create and run Python and/or R programs, or that you will need to install these.
+Because of the vast number of possible combinations of interpreter, editor, modes of execution, and operating systems, we will not recommend a specific configuration for you. However, if you don't already have installed the tools to create and run Python and/or R programs, we do suggest the following resources.
+
+::: callout-important
+Although we do not provide specifications for your entire programming environment, we do expect that you have installed a version of Python `>=` 3.9 and R \>= `4.3`.
+:::
 
 ## Free Cloud Resources
 
