--- a/notebooks/M01_GettingStarted/M01-00-Intro.qmd
+++ b/notebooks/M01_GettingStarted/M01-00-Intro.qmd
@@ -38,7 +38,7 @@ Programs may also be run from within a text editor or IDE, for example using "pl
 Because of the vast number of possible combinations of interpreter, editor, modes of execution, and operating systems, we will not recommend a specific configuration for you. However, if you don't already have installed the tools to create and run Python and/or R programs, we do suggest the following resources.
 
 ::: callout-important
-Although we do not provide specifications for your entire programming environment, we do expect that you have installed a version of Python `>=` 3.9 and R \>= `4.3`.
+Although we do not provide specifications for your entire programming environment, we do expect that you have installed a version of Python $>=$ 3.9 and R $>=$ 4.3.
 :::
 
 ## Free Cloud Resources
