--- a/notebooks/M02_BasicPython/m02-intro.qmd
+++ b/notebooks/M02_BasicPython/m02-intro.qmd
@@ -9,9 +9,9 @@
 ## Suggested Readings
 
 -   [Katz and Katz 2019, Section 1, Preparing the Workspace](https://learning.oreilly.com/library/view/learn-python-by/9781789535365/8f352965-cebb-43c0-b2ca-0f6bf944899e.xhtml)
--   [Lutz, Learning Python, Part I: Getting Started, Chapter 2](https://learning.oreilly.com/library/view/learning-python-5th/9781449355722/ch02.html)
--   [Lutz, Learning Python, Part I: Getting Started, Chapter 3](https://learning.oreilly.com/library/view/learning-python-5th/9781449355722/ch03.html)
--   [Lutz, Learning Python, Part II: Types and Operations, Chapters 4–9](https://learning.oreilly.com/library/view/learning-python-5th/9781449355722/part02.html)
+-   [Lutz, Learning Python, Part I: Getting Started, Chapter 2](https://learning.oreilly.com/library/view/learning-python-6th/9781098171292/ch02.html)
+-   [Lutz, Learning Python, Part I: Getting Started, Chapter 3](https://learning.oreilly.com/library/view/learning-python-6th/9781098171292/ch03.html)
+-   [Lutz, Learning Python, Part II: Objects and Operations, Chapters 4–9](https://learning.oreilly.com/library/view/learning-python-6th/9781098171292/part02.html)
 -   [Katz and Katz 2019, Section 1, First Steps in Coding - Variables and Data Types](https://learning.oreilly.com/library/view/learn-python-by/9781789535365/5fea535c-b144-4c8b-b20b-0a0ee1c1f157.xhtml)
 -   [Built-in Types (Official)](https://docs.python.org/3/library/stdtypes.html)
 -   [Python Data Types (GFG)](https://www.geeksforgeeks.org/python-data-types/)
