--- a/notebooks/M04_PythonFunctions/m04-intro.qmd
+++ b/notebooks/M04_PythonFunctions/m04-intro.qmd
@@ -11,11 +11,11 @@
 
 ## Suggested Readings
 
--   [Lutz 2019, Part IV, Chapter 16: Function Basics](https://learning.oreilly.com/library/view/learning-python-5th/9781449355722/ch16.html)
--   [Lutz 2019, Part IV, Chapter 17: Scopes](https://learning.oreilly.com/library/view/learning-python-5th/9781449355722/ch17.html)
+-   [Lutz 2019, Part IV, Chapter 16: Function Basics](https://learning.oreilly.com/library/view/learning-python-6th/9781098171292/ch16.html)
+-   [Lutz 2019, Part IV, Chapter 17: Scopes](https://learning.oreilly.com/library/view/learning-python-6th/9781098171292/ch17.html)
     -   Non-local is for advanced users.
--   [Lutz 2019, Part IV, Chapter 18. Arguments](https://learning.oreilly.com/library/view/learning-python-5th/9781449355722/ch18.html)
--   [Lutz 2019, Part IV, Chapter 19: Advanced Function Topics](https://learning.oreilly.com/library/view/learning-python-5th/9781449355722/ch19.html)
+-   [Lutz 2019, Part IV, Chapter 18. Arguments](https://learning.oreilly.com/library/view/learning-python-6th/9781098171292/ch18.html)
+-   [Lutz 2019, Part IV, Chapter 19: Functions Odds and Ends](https://learning.oreilly.com/library/view/learning-python-6th/9781098171292/ch19.html)
 -   [McKinney, 2023, Python for Data Analysis, "3.2: Functions"](https://wesmckinney.com/book/python-builtin#functions)
 -   [Functions (W3S)](https://www.w3schools.com/python/python_functions.asp)
 -   [Global and Local Variables (GFG)](https://www.geeksforgeeks.org/global-local-variables-python/?ref=lbp)
