--- a/notebooks/M11_RDplyr/M11-02-Dplyr.ipynb
+++ b/notebooks/M11_RDplyr/M11-02-Dplyr.ipynb
@@ -246,13 +246,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────── tidyverse 2.0.0 ──\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.3     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.4.4     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.3     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────────────────────────────────────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdplyr    \u001b[39m 1.1.4     \u001b[32m✔\u001b[39m \u001b[34mreadr    \u001b[39m 2.1.5\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.1     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.4     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.4     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n"
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "858969fa-97bc-4d5b-9bab-06fad21886c4",
    "metadata": {
     "tags": [],
@@ -589,7 +589,7 @@
        "<table class=\"dataframe\">\n",
        "<caption>A tibble: 6 × 3</caption>\n",
        "<thead>\n",
-       "\t<tr><th scope=col>city</th><th scope=col>tmpd</th><th scope=col>dewpoint</th></tr>\n",
+       "\t<tr><th scope=col>city</th><th scope=col>tmpd</th><th scope=col>dptp</th></tr>\n",
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
@@ -605,7 +605,7 @@
       "text/latex": [
        "A tibble: 6 × 3\n",
        "\\begin{tabular}{lll}\n",
-       " city & tmpd & dewpoint\\\\\n",
+       " city & tmpd & dptp\\\\\n",
        " <chr> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
        "\t chic & 31.5 & 31.500\\\\\n",
@@ -620,7 +620,7 @@
        "\n",
        "A tibble: 6 × 3\n",
        "\n",
-       "| city &lt;chr&gt; | tmpd &lt;dbl&gt; | dewpoint &lt;dbl&gt; |\n",
+       "| city &lt;chr&gt; | tmpd &lt;dbl&gt; | dptp &lt;dbl&gt; |\n",
        "|---|---|---|\n",
        "| chic | 31.5 | 31.500 |\n",
        "| chic | 33.0 | 29.875 |\n",
@@ -631,13 +631,13 @@
        "\n"
       ],
       "text/plain": [
-       "  city tmpd dewpoint\n",
-       "1 chic 31.5 31.500  \n",
-       "2 chic 33.0 29.875  \n",
-       "3 chic 33.0 27.375  \n",
-       "4 chic 29.0 28.625  \n",
-       "5 chic 32.0 28.875  \n",
-       "6 chic 40.0 35.125  "
+       "  city tmpd dptp  \n",
+       "1 chic 31.5 31.500\n",
+       "2 chic 33.0 29.875\n",
+       "3 chic 33.0 27.375\n",
+       "4 chic 29.0 28.625\n",
+       "5 chic 32.0 28.875\n",
+       "6 chic 40.0 35.125"
       ]
      },
      "metadata": {},
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "07bd86c3-9c5e-421c-8463-a3e3eb39720b",
    "metadata": {
     "tags": [],
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "4ee2b831-8e69-491c-8e2a-a888d6b8029f",
    "metadata": {
     "tags": [],
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "fca195ec-57e8-46c5-8dd6-1529dcca94e2",
    "metadata": {
     "tags": [],
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "9d7938a9-c5f8-49d8-8699-c2c156afddb4",
    "metadata": {
     "tags": [],
@@ -1568,7 +1568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "b3f4e3a6-6be0-49d2-ba03-9fcfc72254c4",
    "metadata": {
     "tags": [],
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "34cdea90-60c0-43be-acf6-c17af8ef9751",
    "metadata": {
     "tags": [],
@@ -1726,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "a4aa12e7-3fc1-4d36-bbb7-40d6c6664884",
    "metadata": {
     "tags": [],
@@ -1866,7 +1866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "f282bc64-481f-410e-a1d2-2f2351452111",
    "metadata": {
     "tags": [],
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "0c870358-cadc-451f-9c6b-dbb745e9fcff",
    "metadata": {
     "tags": [],
@@ -2093,7 +2093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "eac2896e-a3cf-4b9d-a878-b1f536b466f7",
    "metadata": {
     "tags": [],
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "0774ad08-80eb-4344-928f-63e10d1bc814",
    "metadata": {
     "tags": [],
@@ -2372,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "72d710d1-c794-40ff-b6c8-d8bc843b5ffc",
    "metadata": {
     "tags": [],
@@ -2469,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "72e37fed-73eb-4ce5-977f-66c764ad49be",
    "metadata": {
     "tags": [],
@@ -2560,7 +2560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "57fe034f-1e99-4ca8-a53a-3ce149974d0a",
    "metadata": {
     "tags": [],
@@ -2598,7 +2598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "7f29dc70-af72-41c1-ba16-294320090610",
    "metadata": {
     "tags": [],
@@ -2711,7 +2711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "2a436a25-323d-4870-b49e-a767f9b457fa",
    "metadata": {
     "tags": [],
@@ -2873,7 +2873,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.3.1"
+   "version": "4.4.2"
   }
  },
  "nbformat": 4,
