--- a/notebooks/M10_RBasics/m10-intro.qmd
+++ b/notebooks/M10_RBasics/m10-intro.qmd
@@ -16,28 +16,28 @@
 
 ### Introducing R
 
-<iframe id="kmsembed-1_l8xw7tpz" width="400" height="285" src="https://343772-1.kaf.kaltura.com/embed/secure/iframe/entryId/1_l8xw7tpz/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 Introducing R"></iframe><br />
+<iframe id="kmsembed-1_l8xw7tpz" width="400" height="285" src="https://kaltura-prod.its.virginia.edu/embed/secure/iframe/entryId/1_l8xw7tpz/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 Introducing R"></iframe><br />
 
 ### R Data Types and Operators
 
-<iframe id="kmsembed-1_qowtoc4i" width="400" height="285" src="https://343772-1.kaf.kaltura.com/embed/secure/iframe/entryId/1_qowtoc4i/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Data Types and Operators"></iframe><br />
+<iframe id="kmsembed-1_qowtoc4i" width="400" height="285" src="https://kaltura-prod.its.virginia.edu/embed/secure/iframe/entryId/1_qowtoc4i/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Data Types and Operators"></iframe><br />
 
 ### R Data Structures
 
-<iframe id="kmsembed-1_dj5ez3jt" width="400" height="285" src="https://343772-1.kaf.kaltura.com/embed/secure/iframe/entryId/1_dj5ez3jt/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Data Structures"></iframe><br />
+<iframe id="kmsembed-1_dj5ez3jt" width="400" height="285" src="https://kaltura-prod.its.virginia.edu/embed/secure/iframe/entryId/1_dj5ez3jt/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Data Structures"></iframe><br />
 
 ### R Factors
 
-<iframe id="kmsembed-1_bz23fog2" width="400" height="285" src="https://343772-1.kaf.kaltura.com/embed/secure/iframe/entryId/1_bz23fog2/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Factors"></iframe><br />
+<iframe id="kmsembed-1_bz23fog2" width="400" height="285" src="https://kaltura-prod.its.virginia.edu/embed/secure/iframe/entryId/1_bz23fog2/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Factors"></iframe><br />
 
 ### R Data Frames
 
-<iframe id="kmsembed-1_csst6v52" width="400" height="285" src="https://343772-1.kaf.kaltura.com/embed/secure/iframe/entryId/1_csst6v52/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Data Frames"></iframe><br />
+<iframe id="kmsembed-1_csst6v52" width="400" height="285" src="https://kaltura-prod.its.virginia.edu/embed/secure/iframe/entryId/1_csst6v52/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Data Frames"></iframe><br />
 
 ### R Control Structures
 
-<iframe id="kmsembed-1_b16svepv" width="400" height="285" src="https://343772-1.kaf.kaltura.com/embed/secure/iframe/entryId/1_b16svepv/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Control Structures"></iframe><br />
+<iframe id="kmsembed-1_b16svepv" width="400" height="285" src="https://kaltura-prod.its.virginia.edu/embed/secure/iframe/entryId/1_b16svepv/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Control Structures"></iframe><br />
 
 ### R Functions
 
-<iframe id="kmsembed-1_qog05kd6" width="400" height="285" src="https://343772-1.kaf.kaltura.com/embed/secure/iframe/entryId/1_qog05kd6/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Functions"></iframe><br />
+<iframe id="kmsembed-1_qog05kd6" width="400" height="285" src="https://kaltura-prod.its.virginia.edu/embed/secure/iframe/entryId/1_qog05kd6/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M10 R Functions"></iframe><br />
