--- a/notebooks/M11_RDplyr/m11-intro.qmd
+++ b/notebooks/M11_RDplyr/m11-intro.qmd
@@ -18,8 +18,8 @@
 
 ### The Tidyverse and Tibbles
 
-<iframe id="kmsembed-1_3tmp8rnp" width="400" height="285" src="https://343772-1.kaf.kaltura.com/embed/secure/iframe/entryId/1_3tmp8rnp/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M11 The Tidyverse and Tibbles"></iframe><br />
+<iframe id="kmsembed-1_3tmp8rnp" width="400" height="285" src="https://kaltura-prod.its.virginia.edu/embed/secure/iframe/entryId/1_3tmp8rnp/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M11 The Tidyverse and Tibbles"></iframe><br />
 
 ### Dplyr
 
-<iframe id="kmsembed-1_kbzi36fo" width="400" height="285" src="https://343772-1.kaf.kaltura.com/embed/secure/iframe/entryId/1_kbzi36fo/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M11 Dplyr"></iframe><br />
+<iframe id="kmsembed-1_kbzi36fo" width="400" height="285" src="https://kaltura-prod.its.virginia.edu/embed/secure/iframe/entryId/1_kbzi36fo/uiConfId/50243942/pbc/353035032/st/0" class="kmsembed" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerPolicy="no-referrer-when-downgrade" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="DS 5100 M11 Dplyr"></iframe><br />
